# common-axum

./: Cargo.toml  package.json
.github/workflows/: semantic_release.yml
src/: app_error_v2.rs  axum.rs  lib.rs
